[project]
name = "tidyverse-to-pandas"
version = "0.1.0"
description = "Converts tidyverse syntax to Python equivalents"
authors = [
    {name = "ConorMcNamara",email = "conor.s.mcnamara@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pyspark (>=3.5.5,<4.0.0)",
    "more-itertools (>=10.6.0,<11.0.0)",
    "natsort (>=8.4.0,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["tidyverse", '.']

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"